remove nowrap for links, fixes #3134
Closes #3134

Merge request studip/studip!2113

--- a/resources/assets/stylesheets/scss/links.scss
+++ b/resources/assets/stylesheets/scss/links.scss
@@ -29,10 +29,6 @@ a:hover.toolbar {
     color: #eee;
 }
 
-a.link-intern, a.link-extern {
-    white-space: nowrap;
-}
-
 a.link-intern {
     @include icon(before, link-intern, clickable, 16px, 2px);
 }
